--- a/app/javascript/src/components/Shop/ShowProduct.css
+++ b/app/javascript/src/components/Shop/ShowProduct.css
@@ -124,7 +124,7 @@
   .show-product-info {
     width: 100%;
     padding: 0.5rem 1rem;
-    height: 400px;
+    height: 1000px;
   }
 
   .price {
@@ -142,7 +142,7 @@
     font-size: 28px;
   }
   .show-product-info {
-    height: 60%;
+    height: 800px;
     padding-bottom: 2rem 0.5rem;
   }
   .select-option {
